src/objects/SFDC_Project__c.object
<CustomObject>
    <description>Project Management</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001v2ZYEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cell_Number__c</fullName>
        <label>Cell Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001v2ZMEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GreenR_Version__c</fullName>
        <label>GreenR Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N70000001v2ZKEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <label>Priority Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001v2ZJEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Name__c</fullName>
        <description>Descriptive Project Name</description>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start-up</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>Status Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <label>Vendor Contact Name</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>ActiveProjects</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <columns>GreenR_Version__c</columns>
        <columns>SFDC_Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>All Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Update_View</fullName>
        <columns>SFDC_Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Status__c</columns>
        <columns>SFDC_Status_Description__c</columns>
        <columns>SFDC_Project_Duration__c</columns>
        <columns>SFDC_Days_Remaining__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>Last Update View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_VirenC</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Project_Name__c</columns>
        <columns>GreenR_Version__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Duration__c</columns>
        <columns>SFDC_Project_Status__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>Priority_Level__c</columns>
        <columns>SFDC_Status_Description__c</columns>
        <columns>Department__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project_Manager__c</field>
            <operation>equals</operation>
            <value>Viren Chovatia</value>
        </filters>
        <label>Projects_VirenC</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Administration</fullName>
        <active>true</active>
        <description>Projects associated with General SF Administration</description>
        <label>Administration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Development</fullName>
        <active>true</active>
        <description>Projects associated with Business Dev.</description>
        <label>Business Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <description>Projects associated with Marketing</description>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>Projects associated with Sales</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Underwriting</fullName>
        <active>true</active>
        <label>Underwriting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>